# paper-account

./: .env.example  Cargo.toml  README.md
custom_storage_dir/: accounts.json
debug_storage/: accounts.json
examples/: basic_account.rs  debug_storage_path.rs  limit_orders.rs  market_orders.rs  market_simulation.rs  multiple_accounts.rs  portfolio_management.rs  storage_path_debug.rs  storage_path_test.rs
src/: account.rs  config.rs  error.rs  lib.rs  main.rs  manager.rs  market.rs  order.rs  position.rs  types.rs
