[package]
name = "na-paper-account"
version = "0.2.1"
edition = "2021"
description = "A Rust library for paper trading accounts"
authors = ["Kyle Johns <kjohns1337@gmail.com>"]
license = "MIT"
repository = "https://github.com/nothingalike/paper-account"
readme = "README.md"
keywords = ["trading", "paper-trading", "finance"]
categories = ["finance"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
rust_decimal = { version = "1.30", features = ["serde"] }
rust_decimal_macros = "1.30"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
dirs = "5.0"

[features]
default = []
async = ["tokio", "async-trait"]
